new file:   MetaTradeNode/BlockChainImpl.cpp 	new file:   MetaTradeNode/BlockChainImpl.h 	new file:   MetaTradeNode/BlockChainService.cpp 	new file:   MetaTradeNode/BlockChainService.h 	new file:   MetaTradeNode/MetaTradeClient.cpp 	new file:   MetaTradeNode/MetaTradeClient.h 	modified:   MetaTradeNode/MetaTradeNode.vcxproj 	modified:   MetaTradeNode/MetaTradeNode.vcxproj.filters 	new file:   MetaTradeNode/StompConst.cpp 	new file:   MetaTradeNode/example.cpp 	modified:   MetaTradeNode/include/stomp/WebStompClient.h

--- a/MetaTradeNode/MetaTradeNode.vcxproj
+++ b/MetaTradeNode/MetaTradeNode.vcxproj
@@ -142,6 +142,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="BlockChainImpl.cpp" />
+    <ClCompile Include="BlockChainService.cpp" />
+    <ClCompile Include="cJSON\cJSON.c" />
+    <ClCompile Include="example.cpp" />
+    <ClCompile Include="MetaTradeClient.cpp" />
+    <ClCompile Include="StompConst.cpp" />
+    <ClCompile Include="stomp\WebStompClient.cpp" />
+    <ClCompile Include="stomp\WebStompType.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="BlockChainImpl.h" />
+    <ClInclude Include="BlockChainService.h" />
+    <ClInclude Include="MetaTradeClient.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
