new file:   MetaTradeNode/CryptoUtils.cpp 	new file:   MetaTradeNode/CryptoUtils.h 	modified:   MetaTradeNode/MetaTradeNode.vcxproj 	modified:   MetaTradeNode/MetaTradeNode.vcxproj.filters 	modified:   MetaTradeNode/example.cpp 	new file:   MetaTradeNode/include/crypto/picosha2.h

--- a/MetaTradeNode/MetaTradeNode.vcxproj
+++ b/MetaTradeNode/MetaTradeNode.vcxproj
@@ -145,6 +145,7 @@
     <ClCompile Include="BlockChainImpl.cpp" />
     <ClCompile Include="BlockChainService.cpp" />
     <ClCompile Include="cJSON\cJSON.c" />
+    <ClCompile Include="CryptoUtils.cpp" />
     <ClCompile Include="example.cpp" />
     <ClCompile Include="MetaTradeClient.cpp" />
     <ClCompile Include="StompConst.cpp" />
@@ -154,6 +155,7 @@
   <ItemGroup>
     <ClInclude Include="BlockChainImpl.h" />
     <ClInclude Include="BlockChainService.h" />
+    <ClInclude Include="CryptoUtils.h" />
     <ClInclude Include="MetaTradeClient.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
