modified:   CryptoUtils.cpp 	modified:   CryptoUtils.h 	modified:   MetaTradeNode.vcxproj 	modified:   MetaTradeNode.vcxproj.filters 	modified:   StompConst.cpp 	new file:   crypto/rmd160.c 	modified:   example.cpp 	new file:   include/crypto/rmd160.h

--- a/MetaTradeNode/MetaTradeNode.vcxproj
+++ b/MetaTradeNode/MetaTradeNode.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="BlockChainService.cpp" />
     <ClCompile Include="cJSON\cJSON.c" />
     <ClCompile Include="CryptoUtils.cpp" />
+    <ClCompile Include="crypto\rmd160.c" />
     <ClCompile Include="example.cpp" />
     <ClCompile Include="MetaTradeClient.cpp" />
     <ClCompile Include="StompConst.cpp" />
