modified:   MetaTradeNode/MetaTradeClient.h 	modified:   MetaTradeNode/MetaTradeNode.vcxproj 	modified:   MetaTradeNode/MetaTradeNode.vcxproj.filters 	modified:   MetaTradeNode/example.cpp 	modified:   MetaTradeNode/include/stomp/WebStompClient.h 	modified:   MetaTradeNode/include/stomp/WebStompType.h 	new file:   MetaTradeNode/lib/libWebStomp++.dll 	new file:   MetaTradeNode/lib/libWebStomp++.lib 	new file:   MetaTradeNode/lib/libboost_random-vc143-mt-x64-1_82.lib 	modified:   MetaTradeNode/stomp/WebStompClient.cpp 	modified:   MetaTradeNode/stomp/WebStompType.cpp

--- a/MetaTradeNode/MetaTradeNode.vcxproj
+++ b/MetaTradeNode/MetaTradeNode.vcxproj
@@ -157,6 +157,8 @@
     <ClInclude Include="BlockChainService.h" />
     <ClInclude Include="CryptoUtils.h" />
     <ClInclude Include="MetaTradeClient.h" />
+    <ClInclude Include="WebStompClient.h" />
+    <ClInclude Include="WebStompType.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
