--- a/MetaTradeNode/MetaTradeNode.vcxproj.filters
+++ b/MetaTradeNode/MetaTradeNode.vcxproj.filters
@@ -15,12 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="stomp\WebStompClient.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="stomp\WebStompType.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="MetaTradeClient.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -39,6 +33,12 @@
     <ClCompile Include="CryptoUtils.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="stomp\WebStompClient.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="stomp\WebStompType.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MetaTradeClient.h">
@@ -51,6 +51,12 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="CryptoUtils.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="WebStompClient.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="WebStompType.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
