--- a/MetaTradeNode/MetaTradeNode.vcxproj
+++ b/MetaTradeNode/MetaTradeNode.vcxproj
@@ -78,8 +78,8 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>F:\Visual Studio Projects\MetaTradeNode\MetaTradeNode\include;$(IncludePath)</IncludePath>
-    <LibraryPath>F:\Visual Studio Projects\MetaTradeNode\MetaTradeNode\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>E:\软工\mate\MetaTradeNode-main\MetaTradeNode-main\MetaTradeNode\include;$(IncludePath)</IncludePath>
+    <LibraryPath>E:\软工\mate\MetaTradeNode-main\MetaTradeNode-main\MetaTradeNode\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
@@ -122,7 +122,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>F:\Visual Studio Projects\MetaTradeNode\MetaTradeNode\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>E:\软工\mate\MetaTradeNode-main\MetaTradeNode-main\MetaTradeNode\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -143,17 +143,24 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Block.cpp" />
     <ClCompile Include="BlockChainImpl.cpp" />
+    <ClCompile Include="BlockChainService.cpp" />
     <ClCompile Include="CryptoUtils.cpp" />
     <ClCompile Include="example.cpp" />
     <ClCompile Include="MetaTradeClient.cpp" />
+    <ClCompile Include="RawBlock.cpp" />
     <ClCompile Include="StompConst.cpp" />
+    <ClCompile Include="Trade.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Block.h" />
     <ClInclude Include="BlockChainImpl.h" />
     <ClInclude Include="BlockChainService.h" />
     <ClInclude Include="CryptoUtils.h" />
     <ClInclude Include="MetaTradeClient.h" />
+    <ClInclude Include="RawBlock.h" />
+    <ClInclude Include="Trade.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="lib\cJSON.dll" />
