deleted:    MetaTradeNode/BlockChainImpl.cpp 	deleted:    MetaTradeNode/BlockChainImpl.h 	modified:   MetaTradeNode/BlockChainService.h 	new file:   MetaTradeNode/LocalService.h 	new file:   MetaTradeNode/MetaTradeBlockchainImpl.cpp 	new file:   MetaTradeNode/MetaTradeBlockchainImpl.h 	new file:   MetaTradeNode/MetaTradeBlockchainModels.cpp 	new file:   MetaTradeNode/MetaTradeBlockchainModels.h 	modified:   MetaTradeNode/MetaTradeClient.cpp 	modified:   MetaTradeNode/MetaTradeClient.h 	new file:   MetaTradeNode/MetaTradeLocalImpl.cpp 	new file:   MetaTradeNode/MetaTradeLocalImpl.h 	modified:   MetaTradeNode/MetaTradeNode.vcxproj 	modified:   MetaTradeNode/MetaTradeNode.vcxproj.filters 	modified:   MetaTradeNode/example.cpp

--- a/MetaTradeNode/MetaTradeNode.vcxproj
+++ b/MetaTradeNode/MetaTradeNode.vcxproj
@@ -143,17 +143,22 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="BlockChainImpl.cpp" />
+    <ClCompile Include="MetaTradeBlockchainImpl.cpp" />
     <ClCompile Include="CryptoUtils.cpp" />
     <ClCompile Include="example.cpp" />
+    <ClCompile Include="MetaTradeBlockchainModels.cpp" />
     <ClCompile Include="MetaTradeClient.cpp" />
+    <ClCompile Include="MetaTradeLocalImpl.cpp" />
     <ClCompile Include="StompConst.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BlockChainImpl.h" />
-    <ClInclude Include="BlockChainService.h" />
+    <ClInclude Include="MetaTradeBlockchainImpl.h" />
+    <ClInclude Include="BlockchainService.h" />
     <ClInclude Include="CryptoUtils.h" />
+    <ClInclude Include="LocalService.h" />
+    <ClInclude Include="MetaTradeBlockchainModels.h" />
     <ClInclude Include="MetaTradeClient.h" />
+    <ClInclude Include="MetaTradeLocalImpl.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="lib\cJSON.dll" />
